ui/css/admin.css
/* Dashboard Widget */

#dashboard_stream_activity:hover .edit-box {
	display: inline;
}

#dashboard_stream_activity.postbox h3 {
	border-bottom: 0;
}

#dashboard_stream_activity h3 .postbox-title-action {
	top: 6px;
}

#dashboard_stream_activity.postbox .inside,
#dashboard_stream_activity ul,
#dashboard_stream_activity ul li {
	margin: 0;
	padding: 0;
}
#dashboard_stream_activity .alternate {
	background-color: #fafafa;
}

#dashboard_stream_activity .dashboard-widget-control-form,
#dashboard_stream_activity .no-records {
	padding: 1em 12px;
}

#dashboard_stream_activity ul {
	border-bottom: 1px solid #eee;
}

#dashboard_stream_activity ul li,
#dashboard_stream_activity .sub-links {
	padding: 1em 12px;

	-webkit-box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.06);
	        box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.06);
}

#dashboard_stream_activity .record-avatar {
	float: left;
	margin-right: 10px;
}

#dashboard_stream_activity .record-avatar a {
	display: block;
}
#dashboard_stream_activity .record-avatar img {
	width: 36px;
	height: 36px;
}

#dashboard_stream_activity .record-meta {
	color: #666;
}

#dashboard_stream_activity .sub-links {
	padding: 12px;
}

#dashboard_stream_activity .tablenav {
	clear: none;
	margin: 4px 0 6px;
}

#dashboard_stream_activity .tablenav .tablenav-pages {
	margin-right: 6px;
}

#dashboard_stream_activity .view-all {
	float: left;
	margin: 7px 0 0 12px;
}

@media only screen and (max-width: 782px) {
	#dashboard_stream_activity h3 .postbox-title-action {
		top: 10px;
	}
	#dashboard_stream_activity .view-all {
		display: none;
	}
	#dashboard_stream_activity .tablenav .tablenav-pages {
		margin: 15px 0;
	}
}


/* Stream Records */

.toplevel_page_wp_stream .tablenav {
	padding-top: 6px;
}

.toplevel_page_wp_stream .tablenav.bottom .button {
	margin-right: 6px;
}

.toplevel_page_wp_stream .tablenav .actions {
	padding: 0;
	overflow: visible;
}

.toplevel_page_wp_stream .chosen-container-single {
	margin-top: 3px;
	margin-right: 6px;
}

.toplevel_page_wp_stream .view-switch {
	display: none;
}

.toplevel_page_wp_stream #filter-date-range {
	float: left;
	margin-right: 6px;
}

.toplevel_page_wp_stream .column-author {
	width: 15%;
}

.toplevel_page_wp_stream .column-date,
.toplevel_page_wp_stream .column-context,
.toplevel_page_wp_stream .column-action,
.toplevel_page_wp_stream .column-connector,
.toplevel_page_wp_stream .column-ip,
.toplevel_page_wp_stream .column-id {
	width: 10%;
}

.toplevel_page_wp_stream .stream-filter-object-id {
	padding-left: 5px;
	visibility: hidden;
}
.toplevel_page_wp_stream td.summary:hover .stream-filter-object-id {
	visibility: visible;
}

@media only screen and (min-width: 782px) {
	.toplevel_page_wp_stream .tablenav .tablenav-pages {
		margin-bottom: 4px;
	}
}

@media only screen and (max-width: 782px) {
	.toplevel_page_wp_stream .tablenav.bottom .displaying-num {
		top: -8px;
	}
}

@media only screen and (max-width: 900px) {
	.toplevel_page_wp_stream .fixed .column-context,
	.toplevel_page_wp_stream .fixed .column-action,
	.toplevel_page_wp_stream .fixed .column-connector,
	.toplevel_page_wp_stream .fixed .column-ip,
	.toplevel_page_wp_stream .fixed .column-id {
		display: none;
	}
	.toplevel_page_wp_stream .fixed .column-date,
	.toplevel_page_wp_stream .fixed .column-author {
		display: table-cell;
	}
	.toplevel_page_wp_stream .fixed .column-date {
		width: 100px;
	}
	.toplevel_page_wp_stream .fixed .column-author {
		width: 33%;
	}
}

@media only screen and (max-width: 480px) {
	.toplevel_page_wp_stream .fixed .column-author {
		display: none;
	}
}

.toplevel_page_wp_stream .column-author a {
	vertical-align: top;
}

.toplevel_page_wp_stream .column-author img {
	float: left;
	margin-right: 10px;
	margin-top: 1px;
	width: 40px;
	height: 40px;
}

.toplevel_page_wp_stream .column-author .deleted {
	font-style: italic;
	color: #aaa;
}

.toplevel_page_wp_stream .filter-date-range {
	margin-top: -1px;
}

.toplevel_page_wp_stream .alignleft.actions input[type=text] {
	height: 28px;
	line-height: 19px;
}

.toplevel_page_wp_stream .date-interval {
	display: inline;
}

.toplevel_page_wp_stream .select2-container {
	margin-right: 6px;
	margin-bottom: 6px;
}

.toplevel_page_wp_stream .select2-container.select2-allowclear .select2-choice abbr {
	margin-top: -2px;
}


/* Live Update */

.toplevel_page_wp_stream .stream-live-update-checkbox .spinner {
	margin-top: 5px;
}

.toplevel_page_wp_stream .new-row,
#dashboard_stream_activity .new-row {
	background-color: #ffffe0;

	-webkit-transition: background 0.5s linear;
	   -moz-transition: background 0.5s linear;
	    -ms-transition: background 0.5s linear;
	     -o-transition: background 0.5s linear;
	        transition: background 0.5s linear;
}

.toplevel_page_wp_stream .new-row.fadeout,
#dashboard_stream_activity .new-row.fadeout {
	background-color: transparent;
}

.toplevel_page_wp_stream #the-list .no-items {
	text-align: center;
}


/* Settings */

.wp_stream_settings .nav-tab-wrapper a:not(.nav-tab-active) {
	border-bottom: 1px solid #ccc;
}

.wp_stream_settings .select2-container {
	width: 100%;
}

.wp_stream_settings .tablenav {
	margin-top: 16px;
}

.wp_stream_settings .tablenav input {
	margin-right: 1em;
}

/* Date Interval Common */

.wp_stream_screen .date-interval .field-predefined {
	width: 165px;
	float: left;
	margin-right: 6px;
	margin-bottom: 6px;
}

.wp_stream_screen .date-interval .date-inputs {
	float: left;
	margin-right: 6px;
	margin-bottom: 6px;
}

.wp_stream_screen .date-interval .date-inputs .field-to,
.wp_stream_screen .date-interval .date-inputs .field-from {
	line-height: 28px;
	height: 28px;
	margin: 0;
	width: 125px;
}

.wp_stream_screen .date-interval .date-inputs .box {
	position: relative;
	display: block;
	float: left;
}
/* ... */

